# SvgElementProvider

./: CMakeLists.txt  README.md  main.cpp  resources.qrc  svgelementprovider.cpp  svgelementprovider.hpp
qml/: Clock.qml  main.qml
